--- a/src/sdk/CompositeInspector/Views/CommandRegistry/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/CommandRegistry/Index.cshtml
@@ -1,41 +1,39 @@
 ﻿@using CompositeInspector.Models
-@using Euclid.Common.Messaging
 @model PublishedCommandsModel
 
 <script type="text/javascript">
-    $(document).ready(function () {
+    $(document).ready(function() {
 
 
-        $(".error").click(function () {
+    	$(".error").click(function() {
 
-            if ($("#error-row").is(":visible")) {
-                $(this).html("Show");
-                hideRow();
-            }
-            else {
-                $(this).html("Hide");
-                
-                var msg = $(this).attr("message");
-                var stack = $(this).attr("callstack");
-        
+    		if ($("#error-row").is(":visible")) {
+    			$(this).html("Show");
+    			hideRow();
+    		} else {
+    			$(this).html("Hide");
 
-                showRow($(this).parent().parent(), msg, stack);
-            }
-        });
+    			var msg = $(this).attr("message");
+    			var stack = $(this).attr("callstack");
+
+
+    			showRow($(this).parent().parent(), msg, stack);
+    		}
+    	});
     });
-    
+
     function hideRow() {
-        $("#error-row").hide();        
+    	$("#error-row").hide();
     }
 
     function showRow(parentRow, msg, stack) {
-        hideRow();
+    	hideRow();
 
-        $("#error-message").html(msg);
-        $("#call-stack").html(stack);
-        
-        $("#error-row").insertAfter($(parentRow));
-        $("#error-row").show(164);
+    	$("#error-message").html(msg);
+    	$("#call-stack").html(stack);
+
+    	$("#error-row").insertAfter($(parentRow));
+    	$("#error-row").show(164);
     }
 </script>
 				 
@@ -79,55 +77,55 @@ else
 			</tr>
 		}
 	</table>
-    
-    <div class="row">
-        <div class="span4 columns offset6">
-            <div class="pagination">
-                @{
-                    var prev = "prev";
-                    var prevUrl = Url.Action("Index", "CommandRegistry", new {pageSize = Model.RowsPerPage, offSet = Model.CurrentPage - 1});
-                    if (!Model.HasPreviousPage)
-                    {
-                        prev = "prev disabled";
-                        prevUrl = "#";
-                    }
 
-                    var next = "next";
-                    var nextUrl = Url.Action("Index", "CommandRegistry", new {pageSize = Model.RowsPerPage, offSet = Model.CurrentPage + 1});
-                    if (!Model.HasNextPage)
-                    {
-                        next = "next disabled";
-                        nextUrl = "#";
-                    }                                                   
-                }
-                <ul>
-                    <li class="@prev">
-                        <a href="@prevUrl">← Prev</a>
-                    </li>
-                    <li class="active"><a href="#">@(Model.CurrentPage + 1) of @(Model.TotalPages + 1)</a></li>
-                    <li class="@next">
-                        <a href="@nextUrl">Next →</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+	<div class="row">
+		<div class="span4 columns offset6">
+			<div class="pagination">
+				@{
+					var prev = "prev";
+					var prevUrl = Url.Action("Index", "CommandRegistry", new { pageSize = Model.RowsPerPage, offSet = Model.CurrentPage - 1 });
+					if (!Model.HasPreviousPage)
+					{
+						prev = "prev disabled";
+						prevUrl = "#";
+					}
+
+					var next = "next";
+					var nextUrl = Url.Action("Index", "CommandRegistry", new { pageSize = Model.RowsPerPage, offSet = Model.CurrentPage + 1 });
+					if (!Model.HasNextPage)
+					{
+						next = "next disabled";
+						nextUrl = "#";
+					}
+				}
+				<ul>
+					<li class="@prev">
+						<a href="@prevUrl">← Prev</a>
+					</li>
+					<li class="active"><a href="#">@(Model.CurrentPage + 1) of @(Model.TotalPages + 1)</a></li>
+					<li class="@next">
+						<a href="@nextUrl">Next →</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 }
 
 <table>
-    <tr id="error-row" style="display: none;">
-        <td colspan="6">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="span3 columns">
-                        <span id="error-message"></span>
-                    </div>
+	<tr id="error-row" style="display: none;">
+		<td colspan="6">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="span3 columns">
+						<span id="error-message"></span>
+					</div>
 
-                    <div class="span11 columns">
-                        <span id="call-stack"></span>
-                    </div>
-                </div>
-            </div>
-        </td>
-    </tr>
+					<div class="span11 columns">
+						<span id="call-stack"></span>
+					</div>
+				</div>
+			</div>
+		</td>
+	</tr>
 </table>
