moved forum to its own database so running unit tests won't interfere with it; minor tweak to forum pagination; changed how the string length convention is applied so that it's used for read models too, but we definitely need to move read models to classmaps soon

--- a/apps/ForumComposite/Views/Post/List.cshtml
+++ b/apps/ForumComposite/Views/Post/List.cshtml
@@ -53,9 +53,11 @@
 <div id="PagerAfter" class="NumberedPager">
 	<span class="Previous">‹</span>
 
-	@foreach (var page in Enumerable.Range(1, (Model.TotalPosts % 10)))
+	@foreach (var page in Enumerable.Range(1, (Model.TotalPosts / 10 + 1)))
 	{
 		@Html.ActionLink(page.ToString(), "List", "Post", new { pageSize = 10, offset = page * 10 - 10 }, null)
 	}
+	
+	<span class="Next">›</span>
 
 </div>
