--- a/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
 								<ul>
 									<li><a href="@Url.Action("Index", "Composite")">Composite details</a></li>
 									<li><a  href="@Url.Action("Index", "CommandRegistry")">Command registry</a></li>
+									<li><a href="@Url.Action("Index", "Logging")">Logs</a></li>
 								</ul>
 							</div>
 
