fixed minor issues with log viewer. log entries from the forum composite are now visible

--- a/src/sdk/CompositeInspector/Views/Logging/Index.cshtml
+++ b/src/sdk/CompositeInspector/Views/Logging/Index.cshtml
@@ -13,7 +13,7 @@
 
 
 @model LogEntryModel
-<div class="row">
+<div class="row" style="margin-top: 7px; margin-bottom: 5px;">
 	<div class="span16 columns">
 		<ul class="pills">
 			@{ var css = string.IsNullOrEmpty(Model.SelectedSource) ? "active" : string.Empty; }
