added "My Discussions"; minor refactoring

--- a/apps/ForumComposite/Views/Authentication/SignIn.cshtml
+++ b/apps/ForumComposite/Views/Authentication/SignIn.cshtml
@@ -6,7 +6,7 @@
 
 <div id="DiscussionForm">
 	<h2>Sign In to the Forum</h2>
-	@using (Html.BeginForm("Authenticate", "Profile", FormMethod.Post))
+	@using (Html.BeginForm("Authenticate", "Authentication", FormMethod.Post))
 	{
 		<div>
 
