--- a/apps/ForumComposite/Views/Shared/LeftMenu.cshtml
+++ b/apps/ForumComposite/Views/Shared/LeftMenu.cshtml
@@ -4,10 +4,10 @@
 	{
 		<li><a href="#">Activity</a></li>
 		<li><a href="#">Inbox</a></li>
-		<li>@Html.ActionLink("Sign Out", "SignOut", "Profile")</li>
+		<li>@Html.ActionLink("Sign Out", "SignOut", "Authentication")</li>
 	}
 	else
 	{
-		<li>@Html.ActionLink("Sign In", "SignIn", "Profile")</li>
+		<li>@Html.ActionLink("Sign In", "SignIn", "Authentication")</li>
 	}
 </ul>
