made forum admin into a composite; minor tweaks to inspector

--- a/apps/AdminComposite/Views/Shared/Header/Breadcrumbs.cshtml
+++ b/apps/AdminComposite/Views/Shared/Header/Breadcrumbs.cshtml
@@ -1,5 +1,4 @@
-﻿
-<ul id="breadcrumbs">
+﻿<ul id="breadcrumbs">
 	<li><a href="/" title="Back to Homepage">Back to Home</a></li>
 	<li><a href="#">Projects</a></li>
 	<li><a href="#">Project's Assets</a></li>
