--- a/apps/AdminComposite/Views/Shared/Header/InfoWidgets.cshtml
+++ b/apps/AdminComposite/Views/Shared/Header/InfoWidgets.cshtml
@@ -1,5 +1,4 @@
-﻿
-<section id="widgets-container">
+﻿<section id="widgets-container">
 	<!-- Widget Box -->
 
 	<div class="widget increase" id="new-visitors">
