--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -1,6 +1,5 @@
-﻿
-<section id="user-info">
-	<img src="@this.Content("~/Content/chromatron/img/sample_user.png")" alt="Sample User Avatar">
+﻿<section id="user-info">
+	<img src="@Url.Content("~/Content/chromatron/img/sample_user.png")" alt="Sample User Avatar">
 
 	<div>
 		<a href="#" title="Account Settings and Profile Page">Joe Tester</a> <em>Administrator</em>
