--- a/apps/AdminComposite/Views/Home/Index.cshtml
+++ b/apps/AdminComposite/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
-﻿
-@{
-	ViewBag.Title = "Composite Application Setup";
-
+﻿@{
+	ViewBag.Title = "Home";
 }
 
 <div class="article-container">
@@ -90,7 +88,7 @@
 	<!-- Article Footer -->
 	<footer>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et <a href="#">
-																																							 	dignissim metus</a>. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat
+			dignissim metus</a>. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat
 			est suscipit sagittis.</p>
 	</footer>
 	<!-- /Article Footer -->
