--- a/apps/AdminComposite/Views/Shared/Header/Meta.cshtml
+++ b/apps/AdminComposite/Views/Shared/Header/Meta.cshtml
@@ -1,5 +1,4 @@
-﻿
-<meta charset="UTF-8">
+﻿<meta charset="UTF-8">
 <meta name="description" content="Euclid Web Console">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
