--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -9,22 +9,18 @@
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
 	<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
-	﻿<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.tipsy.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.facebox.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datepicker.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fileinput.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fullcalendar.css")" rel="stylesheet" type="text/css">
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic"
-		rel="stylesheet" type="text/css">
-	<script src="@Url.Content("~/Content/chromatron/js/libs/modernizr-1.7.min.js")" type="text/javascript"></script>
+	<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.datepicker.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.facebox.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.fileinput.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.fullcalendar.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.tipsy.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
 	<div>
 		<section role="navigation">
 			<header><a href="/" title="Back to Homepage"></a>
@@ -56,6 +52,5 @@
 		<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
 	</div>
-
 </body>
 </html>
