--- a/apps/AdminComposite/Views/Home/Index.cshtml
+++ b/apps/AdminComposite/Views/Home/Index.cshtml
@@ -1,72 +1,64 @@
 ﻿@{
-	ViewBag.Title = "Home";
+	ViewBag.Title = "Dashboard";
 }
+
 <div class="article-container">
 	<header>
 		<h2>@ViewBag.Title</h2>
 	</header>
 	<section>
-		<div class="sidetabs">
-			<nav class="sidetab-switch">
-				<ul>
-					<li><a href="#sidetab4">Event Logs</a></li>
-					<li><a class="default-sidetab" href="#sidetab5">Calendar</a></li>
-				</ul>
-				<p>Aenean facilisis ligula eget orci adipiscing varius. Curabitur sem ligula, egestas
-					vel bibendum sed, sodales eu nulla. Vestibulum luctus aliquam feugiat. Donec porta
-					interdum placerat.</p>
-			</nav>
-
-			<div class="sidetab" id="sidetab4">
-				<h3>Latest Activity</h3>
-				<ul class="logs">
-					<li><span class="logs-timestamp">May 28, 2011</span>
-						<h4><a class="logs-event" href="#">System Update #112563</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-							metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-							sagittis. Phasellus aliquam malesuada blandit.</p>
-						<em class="logs-meta">Posted by <a href="#">Administrator</a></em> </li>
-					<li><span class="logs-timestamp">May 26, 2011</span>
-						<h4><a class="logs-event" href="#">System Update #112562</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-							metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-							sagittis. Phasellus aliquam malesuada blandit.</p>
-						<em class="logs-meta">Posted by <a href="#">Administrator</a></em> </li>
-					<li class="bomb"><span class="logs-timestamp">May 25, 2011</span>
-						<h4><a class="logs-event" href="#">Security Violation</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-							metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-							sagittis. Phasellus aliquam malesuada blandit.</p>
-						<em class="logs-meta">Posted by <a href="#">Administrator</a></em> </li>
-					<li><span class="logs-timestamp">May 23, 2011</span>
-						<h4><a class="logs-event" href="#">System Update #112561</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-							metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-							sagittis. Phasellus aliquam malesuada blandit.</p>
-						<em class="logs-meta">Posted by <a href="#">Administrator</a></em> </li>
-					<li class="event"><span class="logs-timestamp">May 23, 2011</span>
-						<h4><a class="logs-event" href="#">New User Created</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-							metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-							sagittis. Phasellus aliquam malesuada blandit.</p>
-						<em class="logs-meta">Posted by <a href="#">Administrator</a></em> </li>
-				</ul>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim
-					metus. Maecenas id augue ac metus tempus aliquam. Sed pharetra placerat est suscipit
-					sagittis. Phasellus aliquam malesuada blandit. Donec adipiscing sem erat. Nunc at
-					dui id purus lacinia tincidunt sit amet vel erat. Quisque congue urna ut nunc tempor
-					sodales. Sed neque leo, elementum id malesuada id, consequat et erat. Maecenas lorem
-					mauris, consequat ornare elementum adipiscing, tristique eu eros. Nulla sodales,
-					tellus id porta condimentum, purus tortor faucibus orci, et interdum dui purus quis
-					massa.</p>
-			</div>
-
-			<div class="sidetab default-sidetab" id="sidetab5">
-				Hello!
-			</div>
-
-		</div>
-
+			<h3>User Activity</h3>
+			<table class="data" data-chart="line">
+				<thead>
+					<tr>
+						<td></td>
+						<th scope="col">12/12/2011</th>
+						<th scope="col">12/12/2011</th>
+						<th scope="col">12/12/2011</th>
+						<th scope="col">12/12/2011</th>
+						<th scope="col">Yesterday</th>
+						<th scope="col">Today</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">Posts</th>
+						<td>190</td>
+						<td>160</td>
+						<td>40</td>
+						<td>120</td>
+						<td>30</td>
+						<td>70</td>
+					</tr>
+					<tr>
+						<th scope="row">Comments</th>
+						<td>3</td>
+						<td>40</td>
+						<td>30</td>
+						<td>45</td>
+						<td>35</td>
+						<td>49</td>
+					</tr>
+					<tr>
+						<th scope="row">Upvotes</th>
+						<td>10</td>
+						<td>180</td>
+						<td>10</td>
+						<td>85</td>
+						<td>25</td>
+						<td>79</td>
+					</tr>
+					<tr>
+						<th scope="row">Downvotes</th>
+						<td>40</td>
+						<td>80</td>
+						<td>90</td>
+						<td>25</td>
+						<td>15</td>
+						<td>119</td>
+					</tr>
+				</tbody>
+			</table>
 	</section>
 	<footer>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et <a href="#">
@@ -74,6 +66,13 @@
 			est suscipit sagittis.</p>
 	</footer>
 </div>
+
+@section Breadcrumbs {
+	<ul id="breadcrumbs">
+		<li><a href="/" title="Back to Homepage">Home</a></li>
+		<li>Dashboard</li>
+	</ul>
+}
 
 @section SideBar {
 	<section class="sidebar nested">
