--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -1,22 +1,22 @@
 ﻿<ul>
 	<li class="current"><a href="/" title="title" class="dashboard no-submenu">Dashboard</a></li>
-	<li><a href="#" title="title" class="articles">My Forums</a><span title="There are 23 new log entries">23</span>
+	<li><a href="#" title="Forums" class="articles">Forums</a><span title="There are 23 new log entries">23</span>
 		<ul>
-			<li><a href="#">Manage Forums</a></li>
-			<li><a href="#">Create New Forum</a></li>
+			<li>@Html.ActionLink("Manage Forums", "Manage", "Forum")</li>
+			<li>@Html.ActionLink("Create a Forum", "Create", "Forum")</li>
 		</ul>
 	</li>
-	<li><a href="#" title="title" class="gallery">Users</a><span title="There are 23 new log entries">23</span>
+	<li><a href="#" title="Users" class="gallery">Users</a><span title="There are 23 new log entries">23</span>
 		<ul>
-			<li><a href="#">Manage Users</a></li>
-			<li><a href="#">Invite User</a></li>
-			<li><a href="#">Create New User</a></li>
+			<li>@Html.ActionLink("Manage Users", "Manage", "User")</li>
+			<li>@Html.ActionLink("Invite Users", "Invite", "User")</li>
+			<li>@Html.ActionLink("Create a User", "Create", "User")</li>
 		</ul>
 	</li>
-	<li><a href="#" title="title" class="gallery">Moderation</a><span title="There are 47 new log entries">47</span>
+	<li><a href="#" title="Moderation" class="gallery">Moderation</a><span title="There are 47 new log entries">47</span>
 		<ul>
-			<li><a href="#">Moderate Posts</a></li>
-			<li><a href="#">Moderate Comments</a></li>
+			<li>@Html.ActionLink("Moderate Posts", "Posts", "Moderation")</li>
+			<li>@Html.ActionLink("Moderate Comments", "Comments", "Moderation")</li>
 		</ul>	
 	</li>
 </ul>
