--- a/apps/AdminComposite/Views/Forum/Manage.cshtml
+++ b/apps/AdminComposite/Views/Forum/Manage.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using ForumAgent.ReadModels
+@model IList<Forum>
+
+@{
 	ViewBag.Title = "Manage Forums";
 }
 
@@ -7,20 +10,28 @@
 		<h2>@ViewBag.Title</h2>
 	</header>
 	<section>
-		<h3>Lorem Ipsum</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor euismod ipsum
-			id molestie. Donec consequat nunc et tortor tristique sed mollis justo sodales.
-			Nulla enim nibh, faucibus non ornare in, egestas nec felis. Morbi id sem nunc, eu
-			cursus nibh. Curabitur sem sapien, dignissim sit amet posuere a, condimentum ornare
-			nulla. Ut accumsan tempor tincidunt. Nulla massa est, bibendum sed malesuada vitae,
-			mattis id sem. Nam blandit facilisis sem sit amet rutrum. Ut ac quam bibendum quam
-			elementum cursus id et justo. Maecenas sit amet elementum justo.</p>
-		<p>Suspendisse est sem, eleifend at bibendum tristique, condimentum vitae nibh. Curabitur
-			dapibus, purus a tincidunt ultricies, lorem quam congue justo, quis imperdiet sem
-			ante nec lacus. Donec sem libero, ultricies in dictum eu, sagittis a nisi. Phasellus
-			varius porttitor odio, eget sodales odio faucibus in. Donec convallis sapien velit.
-			Donec porttitor sollicitudin lorem nec vestibulum. Pellentesque habitant morbi tristique
-			senectus et netus et malesuada fames ac turpis egestas.</p>
+		<h3>Available Forums</h3>
+		<table class="datatable">
+			<thead>
+				<tr>
+					<th class="sorting">Name</th>
+					<th class="sorting">Host</th>
+					<th class="sorting">Slug</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var forum in Model)
+				{
+					<tr>
+						<td>@forum.Name</td>
+						<td>@forum.UrlHostName</td>
+						<td>@forum.UrlSlug</td>
+						<td></td>
+					</tr>
+				}
+			</tbody>
+		</table>
 	</section>
 	<footer>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et <a href="#">
