--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -2,7 +2,7 @@
 @using Euclid.Composites.Mvc.Extensions
 @model CreateForumInputModel
 @{
-	ViewBag.Title = "Create a Forum";
+	ViewBag.Title = "Forums";
 }
 
 <div class="article-container">
@@ -10,20 +10,28 @@
 		<h2>@ViewBag.Title</h2>
 	</header>
 	<section>
-			@using (Html.BeginFormForInputModel(Model, true, Url.Action("Manage")))
-	 {
-				<fieldset><legend>Forum Settings</legend>
-					<dl>
-						<dt>Name</dt>
-						<dd>@Html.EditorFor(m => m.Name)</dd>
-						<dt>Host</dt>
-						<dd>@Html.EditorFor(m => m.UrlHostName)</dd>
-						<dt>Slug</dt>
-						<dd>@Html.EditorFor(m => m.UrlSlug)</dd>
-					</dl>
-				</fieldset>
-				<button type="submit">Create Forum</button> <text> or </text> @Html.ActionLink("Cancel", "Manage")
-	 }
+	<h3>Create a Forum</h3>
+		@using (Html.BeginFormForInputModel(Model, true, Url.Action("List")))
+	{
+			<fieldset><legend>Forum Settings</legend>
+				<dl>
+					<dt>
+						<label>Name</label></dt>
+					<dd>@Html.EditorFor(m => m.Name)</dd>
+					<dt>
+						<label>Host</label></dt>
+					<dd>@Html.EditorFor(m => m.UrlHostName)
+						<p>The host name is the first part of the forum's URL. E.g. http://<b>host.com</b>/</p>
+					</dd>
+					<dt>
+						<label>Slug</label></dt>
+					<dd>@Html.EditorFor(m => m.UrlSlug)
+						<p>The slug is the part of the forum's URL after the host. E.g. http://host.com/<b>my-forum-slug</b></p>
+					</dd>
+				</dl>
+			</fieldset>
+			@:<button type="submit">Create Forum</button> or @Html.ActionLink("Cancel", "List")
+						}
 	</section>
 	<footer>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et <a href="#">
@@ -35,7 +43,7 @@
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="/" title="Back to Homepage">Home</a></li>
-		<li>Forums</li>
 		<li>@ViewBag.Title</li>
+		<li>Create a Forum</li>
 	</ul>
 }
