minor tweaks to admin composite ui

--- a/apps/AdminComposite/Views/Forum/List.cshtml
+++ b/apps/AdminComposite/Views/Forum/List.cshtml
@@ -14,8 +14,8 @@
 			<thead>
 				<tr>
 					<th class="sorting">Name</th>
-					<th class="sorting">Host</th>
-					<th class="sorting">Slug</th>
+					<th class="sorting" rel="tooltip" original-title="The part of the URL that includes the domain name">Host</th>
+					<th class="sorting" rel="tooltip" original-title="The part of the URL after the host name">Slug</th>
 					<th>Actions</th>
 				</tr>
 			</thead>
