--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ForumAgent.ReadModels
 @model Forum
 @{
-	ViewBag.Title = "Forum";
+	ViewBag.Title = "Forums";
 }
 
 <div class="article-container">
